k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uoslife-sso-api
  namespace: uoslife-sso
  labels:
    app: uoslife-sso-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uoslife-sso-api
  template:
    metadata:
      labels:
        app: uoslife-sso-api
    spec:
      containers:
        - name: uoslife-sso-api
          image: harbor.uoslife.team/uoslife-sso/api:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
        - name: harbor.uoslife.team
---
apiVersion: v1
kind: Service
metadata:
  name: uoslife-sso-api
  namespace: uoslife-sso
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
      app: uoslife-sso-api
