k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-api.uoslife.team
  namespace: uoslife
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: "0"
spec:
  rules:
    - host: sso-api.uoslife.team
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: server-sso
                port:
                  number: 3000
